k8s/dev/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-app
  template:
    metadata:
      labels:
        app: aks-app
    spec:
      containers:
      - name: aks-app
        image: myacrtestvik.azurecr.io/aks-app:07997f7c169bb23c4e55a6b31456daccf1795f50   # remove placeholder  with latest pushed image tag myacrtestvik.azurecr.io/aks-app:PLACEHOLDER
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
