k8s/dev/service.yml
apiVersion: v1
kind: Service
metadata:
  name: aks-app-service
  namespace: dev
spec:
  type: clusterIP      # earlier we were using Loadbalancer , the to use ingress change to clusterIP
  selector:
    app: aks-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
