k8s/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-app-ingress-dev
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
    - host: dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aks-app-service
                port:
                  number: 80
